...
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="value_required">Please enter invoice details</string>
    <string name="login_failed">Email &amp; Password do not match</string>
    <string name="enter_email">Enter account email address</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="delete_user">Delete Account</string>
    <string name="new_pass">New Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_register_new_user">New User? Register</string>
    <string name="btn_link_to_login">Already registered? Login instead</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
...
    <string name="update_password">Update Password</string>
    <string name="new_email">New Email</string>
    <string name="current">Current:</string>
    <string name="sign_out">Sign out</string>
    <string name="ez_invoice_business">EZ Invoice Business</string>
    <string name="my_customers">My Customers</string>
    <string name="my_invoices">My Invoices</string>
    <string name="account_details">Account Details</string>
</resources>
